Fix class naming, text-decoration in cards and icons not showing in firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,7 @@
 
 .card-link {
   height: 100%;
+  text-decoration: none;
 }
 
 .card {
@@ -302,5 +303,6 @@
 }
 
 .footer__social-icon {
-  max-width: 48px;
+  width: 48px;
+  height: auto;
 }
